# misc

./: .gitignore  .gitmodules
class/2020-privacy/HW2/: IL_employee_salary.csv  README  bzhang28_HW2_Q2.ipynb  bzhang28_HW2_Q2.py  pyproject.toml
class/2020-privacy/HW3/: Assignment3.docx  README  Tor_query_EXPORT-1.csv  bizhang_HW3_Q2.ipynb  bizhang_HW3_Q3.ipynb  bzhang28_HW3_Q2.py  bzhang28_HW3_Q3.py  bzhang28_HW3_Q4.ipynb  bzhang28_HW3_Q4.py  pyproject.toml  requests.csv
class/2020-privacy/HW3/.ipynb_checkpoints/: bizhang_HW3_Q2-checkpoint.ipynb  bizhang_HW3_Q3-checkpoint.ipynb
class/2020-privacy/project/: .gitignore  README  pyproject.toml
class/2020-privacy/project/data/: PublicUniversity.csv
class/2020-privacy/project/data/AK/University of Alaska Anchorage/: guidelines.json  privacy_policy.json
class/2020-privacy/project/data/AK/University of Alaska Fairbanks/: guidelines.json  privacy_policy.json
class/2020-privacy/project/data/AL/The University of Alabama/: guidelines.json  privacy_policy.json
class/2020-privacy/project/data/AL/University of Montevallo/: guidelines.json  privacy_policy.json
class/2020-privacy/project/data/AR/Henderson State University/: guidelines.json  (+1 more)
class/2020-privacy/project/src/: Untitled1.ipynb  choose_universities.ipynb  cleanup.ipynb  nlp-guidelines.ipynb  readability-analysis-v7.py  readability_analysis.py  readability_analysis_v2.py  readability_analysis_v3.py  readability_analysis_v4.ipynb  readability_analysis_v5.py  readability_analysis_v6.py  student_population_analysis.ipynb  validate_json.ipynb  write_data.ipynb
(+250 files in other folders)
