[tool.poetry]
name = "hw2"
version = "0.1.0"
description = ""
authors = ["werwty <bizhang@redhat.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyter = "^1.0.0"
matplotlib = "^3.3.2"
numpy = "^1.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
