[tool.poetry]
name = "hw3"
version = "0.1.0"
description = ""
authors = ["werwty <bizhang@redhat.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyter = "^1.0.0"
tld = "^0.12.2"
matplotlib-venn = "^0.11.5"
adblockparser = "^0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
