[tool.poetry]
name = "csc533"
version = "0.1.0"
description = ""
authors = ["bizhang <bihan.zh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
nltk = "^3.5"
numpy = "^1.19.2"
matplotlib = "^3.3.2"
textstat = "^0.6.2"
scipy = "^1.5.4"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
